erl-analyzer/tree-sitter-erlang/test/corpus/forms.txt
==================
Module attribute
==================

-module(test).

---

(source_file
  (module_attribute (atom))
)

==================
Arbitrary attribute
==================

-foobar(test).

---

(source_file
  (attribute (atom) (atom))
)

==================
Comment
==================

%
% foobar

---

(source_file)

==================
Function
==================

f() -> a;
f() -> b.

g(_) -> c, d.

---

(source_file
  (function
    (function_clause (atom) (arg_list) (block (atom)))
    (function_clause (atom) (arg_list) (block (atom))))
  (function
    (function_clause (atom) (arg_list (wildcard)) (block (atom) (atom))))
)
